fix picture on mobile (#110)

--- a/themes/bigspring/assets/scss/_custom.scss
+++ b/themes/bigspring/assets/scss/_custom.scss
@@ -417,7 +417,8 @@ h2.video {
    /* iframe */
    video.value-prop {
     border-radius: 0.5em;
-        width: 400px;
+        width: 100%;
+        max-width: 400px;
     }
     .grid-column-auto {
         grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -551,4 +552,8 @@ h2.video {
     .iframe {
         height: 313px;
    }
+
+  .img-container-lg {
+    min-width: 100%;
+  }
 }
